[gd_scene load_steps=2 format=2]

[ext_resource path="res://Program.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.5
margin_top = -261.5
margin_right = 424.5
margin_bottom = 261.5
popup_exclusive = true
window_title = "Öppna en 128x128 bild"
resizable = true
dialog_text = "OBS! BILDEN MÅSTE VARA 128X128 BILDER FÖR ATT PROGRAMET SKA FUNGERA SOM FÖRVÄNTAT"
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/Users/Frej/Documents/GitHub/Minecraft mapart"
current_path = "/Users/Frej/Documents/GitHub/Minecraft mapart/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Not_128" type="ConfirmationDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -46.0
margin_right = 203.5
margin_bottom = 46.0
window_title = "Försök igen"
resizable = true
dialog_text = "Bilden måste vara 128x128 pixlar, men den valda bilden är ...

Försök igen?"

[connection signal="file_selected" from="Control/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="Control/Not_128" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="popup_hide" from="Control/Not_128" to="." method="_on_ConfirmationDialog_popup_hide"]
